--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@
                 <button onclick="toggleHistoryModal()" class="text-white/80 hover:text-white px-2 transition" title="Database">
                     <i class="fa-solid fa-database"></i>
                 </button>
-
+                <button onclick="toggleWireframe()" class="bg-gray-100/80 hover:bg-gray-200/80 text-gray-700 backdrop-blur-sm border border-gray-300 px-3 py-1.5 rounded text-xs font-bold transition">
+                    <i class="fa-solid fa-border-all mr-2"></i><span data-i18n="btn_wireframe">Wireframe</span>
+                </button>
+                <button onclick="toggleDarkMode()" class="bg-blue-800 hover:bg-blue-700 text-white px-3 py-1.5 rounded text-xs font-bold border border-blue-600 transition">
+                        <i id="dark-icon" class="fa-solid fa-moon"></i>
+                </button>
                 <button onclick="toggleLanguage()" class="bg-eng-dark hover:bg-cyan-800 text-white px-3 py-1.5 rounded text-xs font-bold border border-cyan-600 transition flex items-center">
                     <i class="fa-solid fa-language mr-1"></i> <span id="lang-label">中文</span>
                 </button>
@@ -396,16 +401,6 @@
         </div>
 
         <div class="flex-1 flex flex-col min-w-0 bg-white relative">
-            
-            <div class="absolute top-4 left-4 z-10 flex gap-2">
-                <button onclick="toggleWireframe()" class="bg-gray-100/80 hover:bg-gray-200/80 text-gray-700 backdrop-blur-sm border border-gray-300 px-3 py-1.5 rounded text-xs font-bold transition">
-                    <i class="fa-solid fa-border-all mr-2"></i><span data-i18n="btn_wireframe">Wireframe</span>
-                </button>
-                <button onclick="toggleDarkMode()" class="bg-gray-100/80 hover:bg-gray-200/80 text-gray-700 backdrop-blur-sm border border-gray-300 px-3 py-1.5 rounded text-xs font-bold transition">
-                    <i id="dark-icon" class="fa-solid fa-moon"></i>
-                </button>
-            </div>
-
             <div id="container-3d" class="flex-1 w-full h-full cursor-move"></div>
 
             <!-- Legend / Overlay -->
@@ -2468,4 +2463,3 @@
         }
     </script>
 </body>
-
