--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
         
         // --- FIREBASE CONFIGURATION ---
         const firebaseConfig = {
-            apiKey: "AIzaSyBR10welXYote7BixTaaUvwBcepZo7XyQE",
-            authDomain: "column-app-6d9bd.firebaseapp.com",
-            projectId: "column-app-6d9bd",
-            storageBucket: "column-app-6d9bd.firebasestorage.app",
-            messagingSenderId: "840460637049",
-            appId: "1:840460637049:web:63895a5995d0fbe8fbd5a8",
-            measurementId: "G-DJ5RDVJYW7"
+            apiKey: "iiiiiiiiiiiiiiiiiii",
+            authDomain: "iiiiiiiiiiiiiiiiiii",
+            projectId: "iiiiiiiiiiiiiiiiiii",
+            storageBucket: "iiiiiiiiiiiiiiiiiii",
+            messagingSenderId: "iiiiiiiiiiiiiiiiiii",
+            appId: "iiiiiiiiiiiiiiiiiii",
+            measurementId: "iiiiiiiiiiiiiiiiiii"
         };
                 
         // Initialize Firebase
@@ -2926,3 +2926,4 @@
         }
     </script>
 </body>
+
